--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,17 +1,17 @@
 ﻿@page "/"
 @page "/{categoryurl}"
 @inject ICategoryService CategoryService;
+@inject IProductService ProductService
 
   @if (category != null)
      {
       <h1>Welcome to the @category.name section!</h1>
-      <ProductList CategoryId="@category.Id"/>
+      <ProductList />
      }
    else
      {
     <h1>Welcome to blazing shop!</h1>
     <ProductList />
-
      }
 
 @code{
@@ -20,8 +20,12 @@
 
     private Category category = null;
 
-    protected override void OnParametersSet()
+
+
+    protected override async Task  OnParametersSetAsync()
     {
+       await ProductService.LoadProducts(CategoryUrl);
+
         if (CategoryUrl != null)
         {
             category = CategoryService.Categories.FirstOrDefault(c => c.Url.ToLower().Equals(CategoryUrl.ToLower()));
